alignment issue corrected

--- a/wp-content/themes/aviation/scss/_news.scss
+++ b/wp-content/themes/aviation/scss/_news.scss
@@ -35,7 +35,7 @@
                 flex-basis: 32.9%;
             }
             @media all and (max-width: 768px) {
-                flex-basis: 49.5%;
+                flex-basis: 49%;
             }
             @media all and (max-width: 400px) {
                 flex-basis: 100%;
